added methods