@@ -2,8 +2,11 @@ import java.util.ArrayList;
 
 import static java.lang.Math.max;
 
+// TODO junit testing of methods
 // TODO display
+// TODO read key-event
 // TODO create game-over screen
+// TODO sounds
 // TODO allow choosing a level when calling Main.main i.e. pass level in String[] args
 
 public class Main {
@@ -13,7 +16,7 @@ public class Main {
     private static final int MOVE_DIST = BALL_RAD * 2;
     private static final int FRAME_SIZE = 500;
     private static final int SNAKE_COLOR = 0xa52a2a; // RGB -> 165,42,42
-    private static final int APPLE_COLOR = 0xff0000; // RGB -> 255,0,0
+    static final int APPLE_COLOR = 0xff0000; // RGB -> 255,0,0
     private static final int TICK_TIME = 800 / LEVEL;
     private static final int STARTING_LIVES = max(0, 4 - LEVEL);
 
@@ -27,7 +30,8 @@ public class Main {
     public static void main(String[] args) {
 
         // initialize game data
-        apple = genApple();
+        Ball apple;
+        genApple();
         snake = initSnake();
         apples = 0;
         lives = STARTING_LIVES;
@@ -35,37 +39,37 @@ public class Main {
         long time = System.currentTimeMillis();
         while (true) {
             if ((System.currentTimeMillis() - time) > TICK_TIME) {
-                if (lives == 0) {
-                    gameOver();
+                if (lives <= 0) {
+                    // gameOver();
+                    break;
                 }
-                else if (outOfBounds() || selfEat()) {
+                if (outOfBounds() || selfEat()) {
                     loseLife();
                 }
-                else if (gotApple()) {
-                    apple = genApple();
-                    snake.add(genSnake());
+                if (gotApple()) {
+                    genApple();
+                    growSnake(snake);
                     apples++;
-                    // TODO
-                    // move snake
-                    // update directions
                 }
-                else {
-                    // TODO
-                    // move snake
-                    // update directions
-                    // read key event
-                }
+                moveBalls(snake);
+                // TODO read key event
                 time = System.currentTimeMillis();
             }
         }
     }
 
     // generates a new apple with random coordinates in the window
-    static Ball genApple() {
-        // TODO fix by using modulo, make apples and snake line up
-        // TODO make sure apple can't appear on snake
-        return new Ball("apple", APPLE_COLOR, (int)(Math.random() * FRAME_SIZE),
-                (int)(Math.random() * FRAME_SIZE), "up");
+    static void genApple() {
+        Ball newApple;
+        while (true) {
+            int x = (int)(Math.round(Math.random() * FRAME_SIZE)) % (2 * BALL_RAD) + BALL_RAD;
+            int y = (int)(Math.round(Math.random() * FRAME_SIZE)) % (2 * BALL_RAD) + BALL_RAD;
+            newApple = Ball.makeApple(x, y);
+            if (!overlapList(newApple, snake)) {
+                apple = newApple;
+                return;
+            }
+        }
     }
 
     static ArrayList<Ball> initSnake() {
@@ -74,62 +78,77 @@ public class Main {
         return list;
     }
 
+    // returns whether the two given balls overlap
+    static boolean overlap(Ball ball1, Ball ball2) {
+        return Math.abs(ball1.x - ball2.x) < (2 * BALL_RAD) && Math.abs(ball1.y - ball2.y) < (2 * BALL_RAD);
+    }
 
+    // returns whether the given ball overlaps with any of the balls in given list of balls
+    static boolean overlapList(Ball ball, ArrayList<Ball> balls) {
+        for (Ball segment : balls) {
+            if (overlap(ball, segment)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    // moves a list of balls according to each ball's direction
     static void moveBalls(ArrayList<Ball> balls) {
-        // TODO don't use a foreach loop because you have to update dirs
-        // or do multiple loops
-        for (Ball b : balls) {
-            // TODO call Ball.moveBall() on each ball in snake, and update the direction of each
-            // after this method completes, Ball.dir for each Ball in snake should point in the direction that
-            // the Ball should move next: i.e. each ball's dir will point to the ball ahead of it in the snake
+        for (int i = 0; i < balls.size(); i++) {
+            String dir = balls.get(i).dir;
+            // move ball
+            switch (dir) {
+                case "up" -> balls.get(i).y -= 2 * BALL_RAD;
+                case "down" -> balls.get(i).y += 2 * BALL_RAD;
+                case "left" -> balls.get(i).x -= 2 * BALL_RAD;
+                default -> balls.get(i).x += 2 * BALL_RAD;
+            }
+            // update its direction, except for first ball
+            if (i != 0) {
+                balls.get(i).dir = balls.get(i - 1).dir;
+            }
         }
     }
 
     // generates a segment to be added to the end of the snake
-    // TODO rename to addSegment() or growSnake()
-    static Ball genSnake() {
-        return new Ball("snake", SNAKE_COLOR, snake.get(snake.size() - 1).x,
-                snake.get(snake.size() - 1).y, snake.get(snake.size() - 1).dir);
+    static void growSnake(ArrayList<Ball> balls) {
+        int x = balls.getLast().x;
+        int y = balls.getLast().y;
+        switch(balls.getLast().dir) {
+            case "up" -> y += 2 * BALL_RAD;
+            case "down" -> y -= 2 * BALL_RAD;
+            case "left" -> x += 2 * BALL_RAD;
+            default -> x -= 2 * BALL_RAD;
+        }
+        snake.addLast(new Ball("snake", SNAKE_COLOR, x, y, balls.getLast().dir));
     }
 
     // returns if the snake caught the apple
-    // TODO review math...
     static boolean gotApple() {
-        int headX = snake.getFirst().x;
-        int headY = snake.getFirst().y;
-        int diffX = headX - apple.x;
-        int diffY = headY - apple.y;
-        return ((diffX * diffX + diffY * diffY) < MOVE_DIST * MOVE_DIST);
+        return overlapList(apple, snake);
     }
 
     // checks if the snake is eating itself
-    // TODO review math...
     static boolean selfEat() {
-        int headX = snake.getFirst().x;
-        int headY = snake.getFirst().y;
-        for (int i = 1; i < snake.size(); i++) {
-            int diffX = headX - snake.get(i).x;
-            int diffY = headY - snake.get(i).y;
-            if ((diffX * diffX + diffY * diffY) > MOVE_DIST * MOVE_DIST) {
-                return false;
-            }
-        }
-        return true;
+        ArrayList<Ball> restOfSnake = new ArrayList<Ball>(snake.subList(1, snake.size()));
+        return overlapList(snake.getFirst(), restOfSnake);
     }
 
     // returns if the snake is running off the screen
     static boolean outOfBounds() {
-        return snake.getFirst().x < 0 ||
-                snake.getFirst().x > FRAME_SIZE ||
-                snake.getFirst().y < 0 ||
-                snake.getFirst().y > FRAME_SIZE;
+        // only have to check first segment because subsequent segments follow the first's path
+        return snake.getFirst().x < BALL_RAD ||
+                snake.getFirst().x > FRAME_SIZE - BALL_RAD ||
+                snake.getFirst().y < BALL_RAD ||
+                snake.getFirst().y > FRAME_SIZE - BALL_RAD;
     }
 
     // events for when a player loses a life
     static void loseLife() {
         lives--;
         snake = initSnake();
-        apple = genApple();
+        genApple();
     }
 
     // events for when player runs out of lives
@@ -137,6 +156,4 @@ public class Main {
         // TODO show screen with number of apples collected
         // break out of time loop
     }
-
-
 }
